--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,10 +40,10 @@ jobs:
             cd circleci/google_app_engine
             ls
             pwd
-            . venv/bin/activate
+            source env/bin/activate
             pytest test_main.py > pytestlog.txt
-            mkdir /test-reports
-            cp -p pytestlog.txt /tmp/dumps
+            mkdir test-reports
+            cp -p pytestlog.txt test-reports/
       - store_artifacts:
           path: test-reports/
           destination: tr1
