--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,10 +40,10 @@ jobs:
             cd circleci/google_app_engine
             ls
             pwd
-            source env/bin/activate
-            python test_main.py > pylog.txt
-            pytest test_main.py > pytestlog.txt
             mkdir test-reports
+            source env/bin/activate
+            python3 main.py > pylog.txt
+            pytest test_main.py > pytestlog.txt
             cp -p *.txt test-reports/
       - store_artifacts:
           path: test-reports/
