--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,8 @@ jobs:
             ls
             pwd
             source env/bin/activate
-            python3 main.py > pylog.txt
-            pytest test_main.py > pytestlog.txt
+            python3 main.py > pylog.txt &
+            pytest test_main.py > pytestlog.txt &
             cp -p *.txt test-reports/
           background: true
       - store_artifacts:
@@ -58,6 +58,7 @@ jobs:
   deploy_all_gcpcli:
     executor: build-deploy-executor
     steps:
+      - checkout
       - run:
           name: Initialize gcloud CLI to connect to Google Cloud
           command: |
