--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,23 +34,23 @@ jobs:
           key: deps2-{{ .Branch }}-{{ checksum "circleci/google_app_engine/.circleci/dev.txt" }}
           paths:
             - 'env'
-      - run: mkdir test-reports
       - run:
           name: test.
           command: |
             cd circleci/google_app_engine
             ls
             pwd
+            mkdir test-reports
             source env/bin/activate
             python3 main.py > pylog.txt &
             pytest test_main.py > pytestlog.txt &
             cp -p *.txt test-reports/
           background: true
       - store_artifacts:
-          path: test-reports/
+          path: circleci/google_app_engine/test-reports/
           destination: tr1
       - store_test_results:
-          path: test-reports/
+          path: circleci/google_app_engine/test-reports/
       - add_ssh_keys:
           fingerprints:
             - '3e:ac:02:a3:62:26:ca:78:af:67:f7:9c:f0:68:43:22'
@@ -89,9 +89,9 @@ jobs:
           command: |
             export GET_URL="https://$GOOGLE_PROJECT_ID.appspot.com"
             curl -o result.html $GET_URL
-            cat result_deploy_all.html
+            cat result.html
             mkdir /tmp/dumps
-            cp -p result_deploy_all.html /tmp/dumps
+            cp -p result.html /tmp/dumps
       - store_artifacts:
           path: /tmp/dumps
       
