--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,8 @@ jobs:
             pwd
             mkdir test-reports
             source env/bin/activate
-            python3 main.py > pylog.txt &
-            pytest test_main.py > pytestlog.txt &
+            python3 main.py > pylog.txt
+            pytest test_main.py > pytestlog.txt
             cp -p *.txt test-reports/
           background: true
       - store_artifacts:
