--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,19 +38,20 @@ jobs:
           name: test.
           command: |
             cd circleci/google_app_engine
-            ls
             pwd
             mkdir test-reports
             source env/bin/activate
-            python3 main.py > pylog.txt
-            pytest test_main.py > pytestlog.txt
+            python3 main.py > pylog.txt &
+            pytest test_main.py > pytestlog.txt &
+            ls -ltr
             cp -p *.txt test-reports/
+            ls test-reports/
           background: true
       - store_artifacts:
-          path: circleci/google_app_engine/test-reports/
+          path: /root/project/circleci/google_app_engine/test-reports/
           destination: tr1
       - store_test_results:
-          path: circleci/google_app_engine/test-reports/
+          path: /root/project/circleci/google_app_engine/test-reports/
       - add_ssh_keys:
           fingerprints:
             - '3e:ac:02:a3:62:26:ca:78:af:67:f7:9c:f0:68:43:22'
