--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,7 @@ workflows:
       - deploy_all_gcpcli:
           requires:
             - build_gcpcli
-          branches:
-            only:
-              - master
+          filters:
+            branches:
+              only:
+                - master
