--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
             pwd
             mkdir -pv test-reports/py
             mkdir -pv test-reports/pytest
-            source env/bin/activate
+            #source env/bin/activate
             #nohup python3 main.py > pylog.txt
             pytest -rapP --durations=10  test_main.py > pytestlog.txt
             ls -ltr
