--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,14 +45,14 @@ jobs:
           name: service up main.py
           command: |
             ls ~/project/circleci/google_app_engine/
-            nohup python3 ~/project/circleci/google_app_engine/main.py > ~/test-reports/py/pylog.txt
+            python3 ~/project/circleci/google_app_engine/main.py > ~/test-reports/py/pylog.txt
           background: true
 
       - run:
           name: pytest.
           command: |
             source ~/project/circleci/google_app_engine/env/bin/activate
-            pytest -rapP --durations=10  test_main.py > ~/test-reports/pytest/pytestlog.txt
+            pytest -rapP --durations=10  ~/project/circleci/google_app_engine/test_main.py > ~/test-reports/pytest/pytestlog.txt
             cat ~/test-reports/pytest/pytestlog.txt
       - store_artifacts:
           path: /root/project/circleci/google_app_engine/test-reports/py/pylog.txt
