--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,8 @@ jobs:
       - run:
           name: install python lib.
           command: |
-            cd circleci/google_app_engine
-            python3 -m venv env
-            source env/bin/activate
+            python3 -m venv ~/project/circleci/google_app_engine/env
+            source ~/project/circleci/google_app_engine/env/bin/activate
             pip install -r requirements.txt
       - save_cache:
           key: deps2-{{ .Branch }}-{{ checksum "circleci/google_app_engine/.circleci/dev.txt" }}
@@ -43,14 +42,14 @@ jobs:
       - run:
           name: service up main.py
           command: |
-            source project/circleci/google_app_engine/env/bin/activate
-            python3 project/circleci/google_app_engine/main.py > test-reports/pylog
+            source ~/project/circleci/google_app_engine/env/bin/activate
+            python3 ~/project/circleci/google_app_engine/main.py > test-reports/pylog
           background: true
 
       - run:
           name: pytest.
           command: |
-            source project/circleci/google_app_engine/env/bin/activate
+            source ~/project/circleci/google_app_engine/env/bin/activate
             pytest -rapP --durations=10  --junitxml=test-reports/junit.xml ~/project/circleci/google_app_engine/test_main.py
       - store_artifacts:
           path: test-reports
