--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: |
             python3 -m venv ~/project/circleci/google_app_engine/env
             source ~/project/circleci/google_app_engine/env/bin/activate
-            pip install -r requirements.txt
+            pip install -r ~/project/circleci/google_app_engine/requirements.txt
       - save_cache:
           key: deps2-{{ .Branch }}-{{ checksum "circleci/google_app_engine/.circleci/dev.txt" }}
           paths:
