--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,8 @@ jobs:
       - run:
           name: test:check_webpage
           command: |
-            ss
+            sleep 5
+            ss -aep
             export GET_URL="http://127.0.0.1:8080/"
             curl -o result.html $GET_URL
             cat result.html
